grammar.ebnf
# Oberon Subset Grammar - TatSu EBNF
#
# This grammar describes a subset of the Oberon programming language.
# It is compatible with TatSu parser generator syntax.
# See: https://tatsu.readthedocs.io/en/stable/syntax.html

program = "MODULE" identifier ";" { declaration } "BEGIN" { statement } "END" identifier "." ;

declaration = constDeclaration | varDeclaration | procedureDeclaration ;

constDeclaration = "CONST" { identifier "=" expression ";" } ;

varDeclaration = "VAR" { identifier ":" type ";" } ;

procedureDeclaration = "PROCEDURE" identifier [ "(" [ formalParameters ] ")" ] [ ":" simpleType ] ";" { declaration } "BEGIN" { statement } "END" identifier ";" ;

formalParameters = fpSection { ";" fpSection } ;
fpSection = [ "VAR" ] identifier { "," identifier } ":" type ;

type = simpleType | arrayType ;

simpleType = "INTEGER" | "REAL" | "STRING" ;

arrayType = "ARRAY" [ "[" ] dimensions "]" "OF" simpleType ;

dimensions = integer { "," integer } ;

statement = assignment | procedureCall | ifStatement | whileStatement | forStatement | compoundStatement ;

assignment = ( identifier [ "[" indexList "]" ] ":=" expression ) | procedureCall ;

indexList = expression { "," expression } ;

procedureCall = identifier [ "(" [ expressionList ] ")" ] ;

expressionList = expression { "," expression } ;

ifStatement = "IF" expression "THEN" statement [ "ELSE" statement ] "END" ;

whileStatement = "WHILE" expression "DO" statement "END" ;

forStatement = "FOR" identifier ":=" expression "TO" expression "DO" statement "END" ;

compoundStatement = "BEGIN" { statement } "END" ;

expression = simpleExpression [ relation simpleExpression ] ;

simpleExpression = [ addOperator ] term { addOperator term } ;

term = factor { mulOperator factor } ;

factor = number | string | primaryExpression ;

primaryExpression = identifier [ "[" indexList "]" | "(" [ expressionList ] ")" ] | "(" expression ")" ;

relation = "=" | "#" | "<" | "<=" | ">" | ">=" ;

addOperator = "+" | "-" | "OR" ;

mulOperator = "*" | "/" | "DIV" | "MOD" | "AND" ;

number = real | integer ;

integer = /\d+/ ;

real = /\d+\.\d+/ ;

string = /"(?:[^"\\]|\\.)*"/ ;

identifier = /[a-zA-Z_]\w*/ ;
